--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,4 @@
   <a routerLink="/heros" style="margin-left: 10px">Heros</a>
 </nav>
 <router-outlet></router-outlet>
-<app-messages></app-messages>
+<app-messages class="haha"></app-messages>
