--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+$color:blue;
+@mixin test($px:1px,$col:red) {
+    border: $px solid $col;
+}
